add: 封装分页插件
Signed-off-by: dries <1451691457@qq.com>